[package]
name = "pdfix_json_processor"
authors = ["fero forgac"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.0", features = ["derive", "cargo"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
